# ecs_rl

./: .gitignore  CMakeLists.txt
lib/Components/: Color.h  Dimensions.h  Game_Properties.h  Location.h  Map_Gen_Rules.h  Material.h  Passable.h  Symbol.h  Tilemap.h
lib/Misc/: Tile.h  Tilemap.h
lib/Systems/: Bump_Into.h  Map_Gen.h  Move.h
notes/: notes.txt
src/: Map_Gen.cpp  Move.cpp  main.cpp
